--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "dokan-bondhu",
   "version": "1.0.0",
-  "description": "App to create, read, update, delete with search and filter ecommerce products.\r This project build by MongoDB, Express, React(v18), TailwindCSS and Ant Design.",
+  "description": "App to create, read, update, delete with search and filter. ecommerce products.\r This project build by MongoDB, Express, React(v18), TailwindCSS and Ant Design.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm run dev --prefix client",
+    "dev": "concurrently \"nodemon server.js\" \"npm run client\""
   },
   "keywords": [],
-  "author": "",
+  "author": "Istiak Hossain Tushar",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
