--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,8 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+dotenv.env
+./config/dotenv.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
