--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,7 @@ web_modules/
 .env.production.local
 .env.local
 dotenv.env
-./config/dotenv.env
+.config/dotenv.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
