--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-toast": "^1.0.3",
-    "remixicon": "^4.2.0"
+    "remixicon": "^4.2.0",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
