--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "colors": "^1.4.0",
